[package]
name = "gsize_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
bio_utils_rs = { version = "0.0.2", features = ["io"] }
clap = { version = "4.6.0", features = ["derive"] }
packed-seq = "4.4.2"
simd-minimizers = "2.3.1"
thiserror = "2.0.18"
dashmap = {version = "6.1.0", features = ["rayon"]}
rayon = "1.11.0"
rustc-hash = "2.1.1"
serde = { version = "1.0.228", features = ["derive"] }
